test/error/default_nettype_none.sv
`default_nettype none
module top;
    assign foo = 0;
endmodule
